# probenet

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  docker-publish.yml
configs/: record_sim.yaml  rollout.yaml  so101_env.yaml  trainer.yaml
docker/: .dockerignore  Dockerfile  docker-compose.yml  install_podman.sh
docs/: 2026-07-18_01_initial-plan.md  2026-07-19_01_status-and-roadmap.md  2026-07-19_02_session-setup-report.md  2026-07-20_01_probenet-openpi-architecture.md  2026-07-20_02_lerobot-openpi-baseline-plan.md  2026-07-20_03_implementation-plan.md  2026-07-21_01-status-report.md  2026-07-21_01_status-report.md  2026-07-22_01_cloud-docker-deployment.md  2026-07-22_02_docker-isaacsim-fix.md  2026-07-22_03_docker-cache-fix.md  2026-07-22_04_session-context.md  2026-07-22_05_switch-to-isaacsim-5.1.md  2026-07-22_06_isaacsim-6.0.1-two-venv.md  2026-07-22_07_repo-guide.md  2026-07-23_01_multi-service-architecture.md  2026-07-23_02_next-steps-baseline.md  2026-07-23_03_phase-a-implementation-plan.md  2026-07-23_04_phase-a-implementation-report.md  2026-07-24_01_repo-restructure.md  2026-7-16_01_init.md
episode_gen/sim/: pyproject.toml  server.py
episode_gen/sim/tasks/: __init__.py  mdp.py  oracle.py  pick_place_prim.py  pick_place_prim_cfg.py  robot_cfg.py
episode_gen/so101/: pyproject.toml  server.py
inference/gr00t/: pyproject.toml  serve.py
inference/openpi/: serve.py
policies/openpi/: pyproject.toml
scripts/: collect_sim.py  download_assets.sh  eval.py  eval_baseline.py  record_sim.py  rollout.py  setup-episode-gen-sim.sh  setup-episode-gen-so101.sh  setup-episode-gen.sh  setup-gr00t.sh  setup-openpi.sh  setup-root.sh  setup-sim.sh  setup-so101.sh  setup-train.sh  train.py  verify_probe.py
site/: hugo.toml
site/content/: _index.md
site/layouts/: index.html
site/static/: CNAME
src/probe/: __init__.py
src/probenet/: __init__.py  cli.py
src/probenet/clients/: __init__.py  data_gen_client.py  policy_client.py
src/probenet/conditioning/: __init__.py  gnn_translator.py  modules.py
src/probenet/dataset/: __init__.py  sim_dataset.py
src/probenet/env/: __init__.py  isaac_env.py  lerobot_adapter.py  real_robot.py
src/probenet/eval/: metrics.py
src/probenet/graph/: __init__.py
src/probenet/policies/: __init__.py  bc_policy.py  gr00t.py  pi05.py  probenet.py  so101.py
src/probenet/policy/: __init__.py
src/probenet/probe/: __init__.py  aggressiveness.py  learned_probing.py  probe_encoder.py  probe_runner.py  properties.py
src/probenet/rollout/: __init__.py  worker.py
src/probenet/sync/: __init__.py  daemon.py  hub.py
src/probenet/training/: __init__.py  config.py  trainer.py
src/probenet/utils/: assets.py  paths.py
src/vision/: __init__.py
tests/: test_env.py  test_probe.py
