[project]
name = "probenet"
version = "0.2.0"
description = "Vision-informed interactive perception for physics-aware manipulation"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["robotics", "manipulation", "interactive-perception", "physics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gymnasium>=1.1.1",
    "hydra-core>=1.3.4",
    "lerobot[dataset]>=0.6.0",
    "mujoco>=3.10.0",
    "scipy>=1.14.0",
    "torch>=2.5.1",
    "torchvision>=0.20.0,<0.27.0",
    "transformers>=5.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/probenet"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
