[project]
name = "probenet"
version = "0.3.1"
description = "Vision-informed interactive perception for physics-aware manipulation"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["robotics", "manipulation", "interactive-perception", "physics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.22.4,<2.0.0",
    "websockets>=14.1",
    "huggingface-hub>=0.20.0",
    "pyyaml>=6.0",
    "scipy>=1.14.0",
]

[project.optional-dependencies]
training = [
    "openpi",
    "lerobot",
    "wandb>=0.19.1",
]
dev = [
    "openpi",
    "lerobot",
    "wandb>=0.19.1",
    "pytest>=7.0.0",
    "ruff>=0.4.0",
    "einops>=0.8.0",
    "flax==0.10.2",
    "orbax-checkpoint==0.11.13",
    "torch==2.7.1",
    "transformers==4.53.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/probenet"]

[tool.uv.sources]
openpi = { path = "backends/openpi", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
