[project]
name = "probenet-simulation"
version = "0.1.0"
description = "ProbeNet Isaac Sim data generator"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "probenet",
    "lerobot",
    "numpy>=1.22.4,<2.0.0",
    "websockets>=14.1",
    "scipy>=1.14.0",
    "isaacsim>=6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
probenet = { path = "../..", editable = true }
