[project]
name = "probenet-so101"
version = "0.1.0"
description = "ProbeNet real SO-101 robot data generator"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "probenet",
    "lerobot",
    "numpy>=1.22.4,<2.0.0",
    "websockets>=14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
probenet = { path = "../..", editable = true }
