[project]
name = "probenet-gr00t-inference"
version = "0.1.0"
description = "ProbeNet GR00T N1.7 inference server"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "probenet",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
probenet = { path = "../..", editable = true }
