[project]
name = "probenet-openpi-inference"
version = "0.1.0"
description = "ProbeNet openpi (pi0.5) inference server"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "probenet",
    "openpi",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
probenet = { path = "../..", editable = true }
openpi = { path = "../../backends/openpi", editable = true }
